--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 sudo: required
 services: 
-	- docker
-	
+  - docker
+    
 before_install: 
-	- docker build -t hanumpandey/docker-react -f Dockerfile.dev .
-
-script: 
-    docker run hanumpandey/docker-react npm run test -- --coverage
+  - "docker build -t hanumpandey/docker-react -f Dockerfile.dev ."
+script: "docker run hanumpandey/docker-react npm run test -- --coverage"
 	
