--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ services:
   - docker
     
 before_install: 
-  - "docker build -t hanumpandey/docker-react -f Dockerfile.dev ."
-script: "docker run hanumpandey/docker-react npm run test -- --coverage"
+  - docker build -t hanumpandey/docker-react -f Dockerfile.dev .
+  
+script: docker run hanumpandey/docker-react npm run test -- --coverage
 	
