--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
-sudo: required
+--- 
+before_install: 
+  - "docker build -t hanumpandey/docker-react -f Dockerfile.dev ."
+script: "docker run hanumpandey/docker-react npm run test -- --coverage"
 services: 
   - docker
-    
-before_install: 
-  - docker build -t hanumpandey/docker-react -f Dockerfile.dev .
-  
-script: docker run hanumpandey/docker-react npm run test -- --coverage
+sudo: required
 	
