validated travis yml123

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,19 @@
+
+
 --- 
-before_install: 
-  - "docker build -t hanumpandey/docker-react -f Dockerfile.dev ."
-script: "docker run hanumpandey/docker-react npm run test -- --coverage"
-services: 
-  - docker
-sudo: required
+cache: 
+  directories: 
+    - node_modules
+deploy: 
+  project: ./build/
+  provider: surge
+  skip_cleanup: true
+language: node_js
+node_js: 
+  - stable
+script: 
+  - "npm test"
+  - "npm run build"
+true: 
+  branch: master
 	
