--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,11 @@ cache:
   directories:
   - node_modules
 script:
-  - cd test-app
-  - npm install
-  - npm test
-  - npm run build
+  - docker build -t hanumpandey/docker-react -f Dockerfile.dev .
+  - docker run hanumpandey/docker-react npm run test -- --coverage
+#  - npm install
+#  - npm test
+#  - npm run build
 deploy:
   provider: pages
   skip_cleanup: true
